[gd_scene load_steps=2 format=3 uid="uid://d36fr021sto3u"]

[ext_resource type="Script" path="res://scripts/menus/pause_menu.gd" id="1_3kfyq"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3kfyq")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -358.0
offset_top = -202.0
offset_right = 358.0
offset_bottom = 202.0
grow_horizontal = 2
grow_vertical = 2

[node name="Pause" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -46.0
offset_top = 49.0
offset_right = 47.0
offset_bottom = 94.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Game Paused"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -26.0
offset_right = 104.0
offset_bottom = 141.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResumeButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "RESUME"

[node name="StartMenuButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "START MENU"

[node name="ExitButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "EXIT"

[connection signal="pressed" from="Panel/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/StartMenuButton" to="." method="_on_start_menu_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
